Correction in Requests

--- a/templates/requests.html
+++ b/templates/requests.html
@@ -23,7 +23,7 @@
             <tr>
                 <td>{{ request['name'] }}</td>
                 <td>{{ request['email'] }}</td>
-                <td>{{request['school/college']}}</td>
+                <td>{{request['school']}}</td>
                 <td>{{ request['program'] }}</td>
                 <td>{{ request['details'] }}</td>
             </tr>
