--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,12 @@
                             <a class="nav-link" href="{{ url_for('donate') }}">Donate</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin_login') }}">Admin Login</a>
                         </li>
+
                     </ul>
                 </div>
             </div>
