--- a/templates/requests.html
+++ b/templates/requests.html
@@ -30,5 +30,6 @@
             {% endfor %}
         </tbody>
     </table>
+    <button href="{{ url_for('download_csv') }}" >Download as CSV</button>
 </div>
 {% endblock %}
