--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,9 +1,74 @@
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        $('#imageModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget); // Button that triggered the modal
+            var src = button.data('src'); // Extract info from data-* attributes
+            var modal = $(this);
+            modal.find('#modalImage').attr('src', src);
+        });
+    });
+    </script>
+    
 {% extends "base.html" %}
 
-{% block title %}Submit Request{% endblock %}
+{% block title %}Gallery{% endblock %}
 
 {% block content %}
 
-<h1>Hello</h1>
+
+<div class="container">
+    <div class="d-flex flex-column align-items-center text-center mb-5">
+        <h1>Past Events Gallery</h1>
+        <p style="font-style: italic;font-size: 20px;">Celebrating our journey and milestones</p>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event1.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 1</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="static/gallery/event2.jpg" class="card-img-top" alt="Event 2" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event2.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 2</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="static/gallery/event3.jpg" class="card-img-top" alt="Event 3" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event3.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 3</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        <!-- Add more cards as needed for additional events -->
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="imageModalLabel">Image View</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <img src="" id="modalImage" class="img-fluid" alt="Zoomed Image">
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
