--- a/templates/requests.html
+++ b/templates/requests.html
@@ -13,8 +13,10 @@
             <tr>
                 <th>Name</th>
                 <th>Email</th>
+                <th>Phone Number</th>
                 <th>School/College</th>
-                <th>Program</th>
+                <th>Year</th>
+                <th>Purpose</th>
                 <th>Details</th>
             </tr>
         </thead>
@@ -23,8 +25,10 @@
             <tr>
                 <td>{{ request['name'] }}</td>
                 <td>{{ request['email'] }}</td>
+                <td>{{ request['number'] }}</td>
                 <td>{{request['school']}}</td>
-                <td>{{ request['program'] }}</td>
+                <td>{{ request['year'] }}</td>
+                <td>{{ request['purpose']}}</td>
                 <td>{{ request['details'] }}</td>
             </tr>
             {% endfor %}
