--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -8,7 +8,7 @@
         });
     });
     </script>
-    
+
 {% extends "base.html" %}
 
 {% block title %}Gallery{% endblock %}
@@ -18,7 +18,7 @@
 
 <div class="container">
     <div class="d-flex flex-column align-items-center text-center mb-5">
-        <h1>Past Events Gallery</h1>
+        <h1>Events Gallery</h1>
         <p style="font-style: italic;font-size: 20px;">Celebrating our journey and milestones</p>
     </div>
 
