--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,9 @@
                             <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('volunteer') }}">Volunteer</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin_login') }}">Admin Login</a>
                         </li>
 
