--- a/templates/submit.html
+++ b/templates/submit.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group">
                     <label for="identity_proof">Identity Proof</label>
-                    <input type="file" class="form-control" id="identity_proof" name="identity_proof" required>
+                    <input type="file" class="form-control" id="identity_proof" name="identity_proof" accept=".jpg,.jpeg,.png,.pdf" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
