--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -50,6 +50,39 @@
                 </div>
             </div>
         </div>
+        
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event4.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 4</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event5.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 5</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event6.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 6</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
         <!-- Add more cards as needed for additional events -->
     </div>
 </div>
