--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,13 +1,3 @@
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        $('#imageModal').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget); // Button that triggered the modal
-            var src = button.data('src'); // Extract info from data-* attributes
-            var modal = $(this);
-            modal.find('#modalImage').attr('src', src);
-        });
-    });
-    </script>
 
 {% extends "base.html" %}
 
@@ -23,62 +13,92 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
-                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event1.jpg">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event1.jpg">
                 <div class="card-body">
                     <h5 class="card-title">Event Title 1</h5>
                     <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
-                <img src="static/gallery/event2.jpg" class="card-img-top" alt="Event 2" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event2.jpg">
+                <img src="static/gallery/event2.jpg" class="card-img-top" alt="Event 2" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event2.jpg">
                 <div class="card-body">
                     <h5 class="card-title">Event Title 2</h5>
                     <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
-                <img src="static/gallery/event3.jpg" class="card-img-top" alt="Event 3" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event3.jpg">
+                <img src="static/gallery/event3.jpg" class="card-img-top" alt="Event 3" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event3.jpg">
                 <div class="card-body">
                     <h5 class="card-title">Event Title 3</h5>
                     <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
                 </div>
             </div>
         </div>
-        
-    <div class="row">
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
-                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event4.jpg">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event1.jpg">
                 <div class="card-body">
-                    <h5 class="card-title">Event Title 4</h5>
+                    <h5 class="card-title">Event Title 1</h5>
                     <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
                 </div>
             </div>
         </div>
-        
-    <div class="row">
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
-                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event5.jpg">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event1.jpg">
                 <div class="card-body">
-                    <h5 class="card-title">Event Title 5</h5>
+                    <h5 class="card-title">Event Title 1</h5>
                     <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
                 </div>
             </div>
         </div>
-        
-    <div class="row">
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
-                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal" data-target="#imageModal" data-src="static/gallery/event6.jpg">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event1.jpg">
                 <div class="card-body">
-                    <h5 class="card-title">Event Title 6</h5>
+                    <h5 class="card-title">Event Title 1</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4" data-aos="fade-up">
+            <div class="card">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event1.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 1</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4" data-aos="fade-up">
+            <div class="card">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event1.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 1</h5>
+                    <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4" data-aos="fade-up">
+            <div class="card">
+                <img src="static/gallery/event1.jpg" class="card-img-top" alt="Event 1" data-toggle="modal"
+                    data-target="#imageModal" data-src="static/gallery/event1.jpg">
+                <div class="card-body">
+                    <h5 class="card-title">Event Title 1</h5>
                     <p class="card-text">Brief description of the event. Highlighting key moments and achievements.</p>
                 </div>
             </div>
@@ -88,7 +108,8 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
+<div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -103,5 +124,18 @@
         </div>
     </div>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        $('#imageModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget); // Button that triggered the modal
+            var src = button.data('src'); // Extract info from data-* attributes
+            var modal = $(this);
+            modal.find('#modalImage').attr('src', src);
+        });
+    });
+</script>
 {% endblock %}
