--- a/templates/index.html
+++ b/templates/index.html
@@ -10,28 +10,28 @@
 <div id="ImagesSlide" class="carousel slide mb-2" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="static/Carasouel/1.jpg" class="d-block w-100" alt="Slide 1">
+            <img src="static/Carasouel/1.webp" class="d-block w-100" alt="Slide 1">
         </div>
         <div class="carousel-item">
-            <img src="static/Carasouel/2.jpg" class="d-block w-100" alt="Slide 2">
+            <img src="static/Carasouel/2.webp" class="d-block w-100" alt="Slide 2">
         </div>
         <div class="carousel-item">
-            <img src="static/Carasouel/3.jpg" class="d-block w-100" alt="Slide 3">
+            <img src="static/Carasouel/3.webp" class="d-block w-100" alt="Slide 3">
         </div>
         <div class="carousel-item">
-            <img src="static/Carasouel/4.jpg" class="d-block w-100" alt="Slide 4">
+            <img src="static/Carasouel/4.webp" class="d-block w-100" alt="Slide 4">
         </div>
         <div class="carousel-item">
-            <img src="static/Carasouel/5.jpg" class="d-block w-100" alt="Slide 5">
+            <img src="static/Carasouel/5.webp" class="d-block w-100" alt="Slide 5">
         </div>
         <div class="carousel-item">
-            <img src="static/Carasouel/6.jpg" class="d-block w-100" alt="Slide 6">
+            <img src="static/Carasouel/6.webp" class="d-block w-100" alt="Slide 6">
         </div>
         <div class="carousel-item">
-            <img src="static/Carasouel/7.jpg" class="d-block w-100" alt="Slide 7">
+            <img src="static/Carasouel/7.webp" class="d-block w-100" alt="Slide 7">
         </div>
         <div class="carousel-item">
-            <img src="static/Carasouel/8.jpg" class="d-block w-100" alt="Slide 8">
+            <img src="static/Carasouel/8.webp" class="d-block w-100" alt="Slide 8">
         </div>
     </div>
     <a class="carousel-control-prev" href="#ImagesSlide" role="button" data-slide="prev">
