--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="d-flex flex-column align-items-center text-center mb-2">
+<div class="d-flex flex-column align-items-center text-center mb-2 slide-up">
     <h1>Welcome to Parisu Charitable and Educational Trust</h1>
     <p style="font-style: italic;font-size: 30px;">Empowering Women, Transforming Lives</p>
 </div>
-<div id="ImagesSlide" class="carousel slide mb-2" data-ride="carousel">
+<div id="ImagesSlide" class="carousel slide mb-2 slide-up" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="static/Carasouel/1.webp" class="d-block w-100" alt="Slide 1">
@@ -43,7 +43,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<div class="row">
+<div class="row slide-up">
     <div class="md-10">
         <section>
             <h2>Who We Are</h2>
