--- a/templates/submit.html
+++ b/templates/submit.html
@@ -3,10 +3,14 @@
 {% block title %}Submit Request{% endblock %}
 
 {% block content %}
+<div class="d-flex flex-column align-items-center text-center mb-5 slide-up">
+    <h1>Submit Your Help Request</h1>
+    <p>We're here to support you! Share your needs with us, and our team will reach out to assist you.</p>
+</div>
 <div class="container pb-5">
-    <div class="card mt-3">
+    <div class="card mt-3 slide-up">
         <div class="card-header">
-            <h2 class="card-title">Submit Help Request</h2>
+            <h2 class="card-title">Send in a Help Request</h2>
         </div>
         <div class="card-body">
             <p>
