--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-    <div class="d-flex flex-column align-items-center text-center mb-5">
+    <div class="d-flex flex-column align-items-center text-center mb-5 slide-up">
         <h1>Events Gallery</h1>
         <p style="font-style: italic;font-size: 20px;">Celebrating our journey and milestones</p>
     </div>
