--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -3,13 +3,13 @@
 {% block title %}Volunteer Registration{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container slide-up">
     <div class="d-flex flex-column align-items-center text-center mb-5">
         <h1>Volunteer Registration</h1>
         <p style="font-style: italic;font-size: 20px;">Join us in making a difference! Provide your details below to participate in upcoming events.</p>
     </div>
 
-    <div class="card mt-5">
+    <div class="card slide-up">
         <div class="card-header">
             <h2 class="card-title">Register as a Volunteer</h2>
         </div>
