--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -32,6 +32,10 @@
                     <input type="text" class="form-control" id="address" name="address" required>
                 </div>
                 <div class="form-group">
+                    <label for="specialization">How can you help us ?</label>
+                    <input type="text" class="form-control" id="specialization" name="specialization" required>
+                </div>
+                <div class="form-group">
                     <label for="identity_proof">Identity Proof</label>
                     <input type="file" class="form-control" id="identity_proof" name="identity_proof" accept=".jpg,.jpeg,.png,.pdf" required>
                 </div>
