--- a/static/styles.css
+++ b/static/styles.css
@@ -31,7 +31,7 @@ body {
 header {
     font-family: 'Georgia', sans-serif; /* Use Montserrat for header text */
     background-color: #F1675C; /* Use blue from the logo */
-    color: #116BA7;;
+    color: #FECD09;
     padding: 1.5rem;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -44,8 +44,8 @@ header {
 /* Footer styling */
 footer {
     font-family: 'Georgia', sans-serif;
-    background-color: rgb(225, 175, 209); /* Use blue from the logo */
-    color: #116BA7;;
+    background-color: #F1675C; /* Use blue from the logo */
+    color: #FECD09;
     padding: 1rem;
     text-align: center;
     width: 100%; /* Ensure footer spans the entire width */
