Content and Styling Changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
         <footer>
             <div class="container footer-content">
                 <p>B2 East Side enclave, 54 Anna Colony 1st Street, Besant Nagar, Chennai-90</p>
-                <p>Contact: panchisubramanian@gmail.com</p>
+                <p>Contact: parisutrust.in@gmail.com OR 9840102079</p>
                 <p class="mb-0">&copy; 2024 PARISU CHARITABLE AND EDUCATIONAL TRUST. All rights reserved.</p>
             </div>
         </footer>
