--- a/templates/donate.html
+++ b/templates/donate.html
@@ -3,36 +3,36 @@
 {% block title %}Donate{% endblock %}
 
 {% block content %}
-<div class="container mt-5 mb-5 slide-up">
-    <div class="text-center mb-4">
+<div class="container">
+    <div class="d-flex flex-column align-items-center text-center mb-5 slide-up">
         <h1>Support Our Cause</h1>
         <p style="font-style: italic; font-size: 20px;">Your contribution can make a significant difference in the lives
             of young women in need.</p>
     </div>
     <div class="row slide-up">
         <div class="col-md-6">
-            <h2>Bank Details</h2>
+            <h2 class="text-center">Bank Details</h2>
             <table class="table table-bordered">
                 <tbody>
                     <tr>
                         <th scope="row">Bank Name:</th>
-                        <td>XYZ Bank</td>
+                        <td>HDFC Bank</td>
                     </tr>
                     <tr>
                         <th scope="row">Account Name:</th>
-                        <td>Parisu Charitable and Educational Trust</td>
+                        <td>PARISU CHARITABLE AND EDUCATIONAL TRUST</td>
                     </tr>
                     <tr>
                         <th scope="row">Account Number:</th>
-                        <td>123456789</td>
+                        <td>50200062983721</td>
                     </tr>
                     <tr>
                         <th scope="row">IFSC Code:</th>
-                        <td>XYZB0000123</td>
+                        <td>HDFC0000010</td>
                     </tr>
                     <tr>
                         <th scope="row">Branch:</th>
-                        <td>Chennai</td>
+                        <td>Besant Nagar Branch</td>
                     </tr>
                 </tbody>
             </table>
