--- a/templates/index.html
+++ b/templates/index.html
@@ -47,10 +47,27 @@
     <div class="md-10">
         <section>
             <h2>Who We Are</h2>
-            <p>Parisu Charitable and Educational Trust is a non-profit organization dedicated to improving the lives of
-                young women in need. Founded on the principles of compassion, equality, and education, we strive to
-                create a world where every girl has the opportunity to pursue her dreams, regardless of her
-                circumstances.</p>
+            <p>We are a dedicated Charitable and Educational Trust, committed to supporting education for girls and advancing women's empowerment. Established in the year 2021, our trust has rapidly grown in scope and impact, receiving Sec 80G certification in 2022.</p>
+            <p>We believe in the transformative power of education and the importance of empowering women from all walks of life. Through our various initiatives, we strive to create opportunities, provide resources, and foster a supportive community for women and girls to thrive.</p>
+        </section>
+        <section>
+            <div class="d-flex align-items-center">
+                <div class="text-container">
+                    <h2>About the Managing Trustee</h2>
+                    <p><strong>Ms. Panchi Subramanian</strong></p>
+                    <p>Ms. Panchi Subramanian, with over 25 years of extensive experience in the Banking and Technology sectors, is dedicated to fostering education for girls and advancing women's empowerment. As the esteemed Chairperson of the Tamilnadu Women's Commission in Chennai, she has played a pivotal role in advocating for women's rights and championing their causes.</p>
+                    <ul>
+                        <li>Brings a wealth of knowledge and expertise from 25 years in Banking and Technology.</li>
+                        <li>Passionately supports and promotes education for girls, recognizing its critical importance.</li>
+                        <li>Actively works towards elevating women's empowerment through various initiatives and programs.</li>
+                        <li>Holds the prestigious position of Chairperson at the Tamilnadu Women's Commission, Chennai, where she continues to make significant contributions to women's welfare.</li>
+                    </ul>
+                </div>
+                <div class="image-container">
+                    <img src="{{ url_for('static', filename='founder.webp') }}" alt="Ms. Panchi Subramanian" class="img-fluid rounded">
+                </div>
+            </div>
+            
         </section>
         <section>
             <h2>Our Mission</h2>
