Mobile view changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="d-flex flex-column align-items-center text-center mb-2 slide-up">
+<div class="d-flex flex-column align-items-center text-center mb-5 slide-up">
     <h1>Welcome to Parisu Charitable and Educational Trust</h1>
     <p style="font-style: italic;font-size: 30px;">Empowering Women, Transforming Lives</p>
 </div>
@@ -43,6 +43,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+<div class="container">
 <div class="row slide-up">
     <div class="md-10">
         <section>
@@ -101,5 +102,6 @@
                 confidentiality.</p>
         </section>
     </div>
+</div>
 </div>
 {% endblock %}
